--- a/LearnStream/frontend/package.json
+++ b/LearnStream/frontend/package.json
@@ -16,6 +16,7 @@
     "mdb-react-ui-kit": "^9.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-pdf": "^9.2.1",
     "react-player": "^2.16.0",
     "react-router-dom": "^7.1.1"
   },
