--- a/LearnStream/frontend/package.json
+++ b/LearnStream/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@mui/icons-material": "^7.1.2",
     "axios": "^1.7.9",
     "lucide-react": "^0.474.0",
     "mdb-react-ui-kit": "^9.0.0",
