--- a/LearnStream/backend/package.json
+++ b/LearnStream/backend/package.json
@@ -22,6 +22,7 @@
     "mongoose-aggregate-paginate-v2": "^1.1.2",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.7",
+    "razorpay": "^2.9.6",
     "validator": "^13.12.0"
   }
 }
